# trust

./: .gitlab-ci.yml  Cargo.toml  README.md  ci-build.sh  ci-lint.sh  clippy.toml  pkgInfo.py
.cargo/: config.toml
.gitlab/templates/: build_container.yml
doc/: Copyright-BSD3Clause.md  Copyright-HRI.md  HRI-EndUserLicenseAgreement-1.0.txt  HRI01.md  HRI02.md  HRI03.md  HRI04.md  HRI05.md  HRI06.md  HRI07.md  HRI08.md  HRI09.md  HRI10.md
images/alpine321-buildenv/: Dockerfile
images/alpine321-env/: Dockerfile
images/alpine321-runtime/: Dockerfile
images/ubuntu2204-buildenv/: Dockerfile
images/ubuntu2204-env/: Dockerfile
src/: hri01.rs  hri01_git_server.rs  hri02.rs  hri02_readme.rs  hri03.rs  hri04.rs  hri05.rs  hri06.rs  hri07.rs  hri08.rs  hri09.rs  hri10.rs  main.rs
