[package]
name = "trust"
version = "1.0.2"
edition = "2021"     # language standard, "2024" will be released soon
authors = ["Marijke Stein <marijke.stein@honda-ri.de>"]
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
git2 = "0.19.0"
log = "0.4.22"
regex = "1.11.1"
simple_logger = "5.0.0"
walkdir = "2.5.0"
